# broker

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  README_8md_source.html  annotated.html  annotated_dup.js  broker_8h_source.html  broker__config_8cpp_source.html  broker__config_8h_source.html  broker__connect_8cpp_source.html  broker__connect_8h_source.html  broker__core_8cpp_source.html  broker__core_8h_source.html  broker__handler_8cpp_source.html  broker__handler_8h_source.html  classasynchronous__handler__wrapper-members.html  classasynchronous__handler__wrapper.html  classasynchronous__handler__wrapper.js  classbroker-members.html  classbroker.html  classbroker.js  classbroker__config-members.html  classbroker__config.html  classbroker__config.js  classbroker__connect-members.html  classbroker__connect.html  classbroker__connect.js  classbroker__core-members.html  classbroker__core.html  classbroker__core.js  classbroker__handler-members.html  classbroker__handler.html  classbroker__handler.js  classcommand__context-members.html  classcommand__context.html  classcommand__context.js  (+162 more)
.github/workflows/: ci.yml
examples/: config.yml
install/: munin-broker  postinst  recodex-broker.service
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  (+34 more)
src/: broker.cpp  broker.h  broker.hpp  broker_config.cpp  broker_config.h  broker_config.hpp  broker_connect.cpp  broker_connect.h  broker_core.cpp  broker_core.h  connection_proxy.h  http_poller.cpp  http_poller.h  main.cpp  task_router.cpp  task_router.h  task_router.hpp  worker.cpp  worker.h  worker_registry.cpp  worker_registry.h
src/commands/: client_commands.h  command_holder.h  commands_base.h  worker_commands.h
src/config/: broker_config.cpp  broker_config.h  frontend_config.h  log_config.h  notifier_config.h
src/handlers/: broker_handler.cpp  broker_handler.h  status_notifier_handler.cpp  status_notifier_handler.h
src/helpers/: create_logger.cpp  create_logger.h  curl.cpp  curl.h  logger.cpp  logger.h  string_to_hex.cpp  string_to_hex.h
src/notifier/: empty_status_notifier.h  http_status_notifier.cpp  http_status_notifier.h  reactor_status_notifier.cpp  reactor_status_notifier.h  status_notifier.h
src/queuing/: multi_queue_manager.cpp  multi_queue_manager.h  queue_manager_interface.h  single_queue_manager.h
src/reactor/: command_holder.cpp  command_holder.h  handler_interface.h  message_container.cpp  message_container.h  reactor.cpp  reactor.h  router_socket_wrapper.cpp  router_socket_wrapper.h  socket_wrapper_base.cpp  socket_wrapper_base.h
tests/: CMakeLists.txt  broker.cpp  broker_config.cpp  mocks.h  multi_queue_manager.cpp  reactor.cpp  single_queue_manager.cpp  task_router.cpp  tests_main.cpp  worker.cpp  worker_registry.cpp
tools/: fake_submit.py  file_server.py  run-hippoes.sh
